Removed the extra ">" from one of the score.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <button class="innerScoreInnerOne" id="addTwoTwo" onclick="clickedTwoSecond()">+2</button>
                     </div>
                     <div class="innerScoreOne">
-                        <button class="innerScoreInnerOne" id="addTwoThree" onclick="clickedTwoThree()">+3</button>>
+                        <button class="innerScoreInnerOne" id="addTwoThree" onclick="clickedTwoThree()">+3</button>
                     </div>
                 </div>
             </div>
